--- a/index.html
+++ b/index.html
@@ -186,34 +186,50 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 06.06.2025</b>
+        <b>Расписание на 07.06.2025</b>
         <p>6:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>6:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 6:20 МСК:</p>
+        <p>6:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 6:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>7:45 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
         <p>8:10 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>8:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:25 МСК:</p>
+        <p>8:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>9:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>14:10 МСК:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>14:45 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>18:10 МСК:</p>
-        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>18:45 МСК:</p>
+        <p>С 9:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>11:50 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>13:55 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>14:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:10 МСК:</p>
+        <p>14:35 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>15:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 15:25 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>19:55 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>20:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 20:30 МСК:</p>
         <p>Продолжение вещания</p>
 
 
