--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="yandex-verification" content="d6393e3431b0c435" />
-	<title>"Райка and Лайка" - интернет-телеканал</title>
+	<title>«Райка and Лайка» - интернет-телеканал</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -161,10 +161,10 @@ window.onclick = function(event) {
 		<img src="/theme/images/Logoreb.png">
 	</div>
 	<div class="title">
-		<p>Интернет-телеканал "Райка and Лайка"</p>
+		<p>Интернет-телеканал «Райка and Лайка»</p>
 	</div>
 	<div class="description">
-		<p>Интернет-телеканал "Райка and Лайка" - это телеканал, который вещает только по сети интернет.</p>
+		<p>Интернет-телеканал «Райка and Лайка» - это телеканал, который вещает только по сети интернет.</p>
 		<p>Мы вещаем разные телепередачи, короткометражные фильмы, шоу и ведём прямые эфиры с разных мероприятий!</p>
 	</div>
 <div class="title">
@@ -186,50 +186,36 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 10.06.2025</b>
+        <b>Расписание на 11.06.2025</b>
         <p>8:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>8:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:20 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 8:45 МСК:</p>
+        <p>С 8:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
+        <p>9:45 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
         <p>10:10 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:50 МСК:</p>
+        <p>10:25 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 11:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:50 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>15:55 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>16:15 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:35 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>17:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 17:25 МСК:</p>
+        <p>11:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>21:55 МСК:</p>
+        <p>12:09 - 12:10 МСК:</p>
+        <p>Код с розыгрышем карт «Стрелка»</p>
+        <p>16:10 МСК:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>16:45 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>20:10 МСК:</p>
+        <p>Там, где горы встречаются с морем</p>
+        <p>20:45 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:15 МСК:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 22:30 МСК:</p>
+        <p>21:10 МСК:</p>
         <p>Продолжение вещания</p>
 
 
@@ -263,9 +249,9 @@ window.onclick = function(event) {
 		</div>
 		<div class="footer2">
 		     <div class="sob">
-		          <a href="https://vk.com/motion.deru"><img src="/theme/images/Motion Deru1.png"></a>
+		          <a href=""><img src="/theme/images/LetoRaL2025.png"></a>
 		     </div>
-		    <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b>
+		    <div class="contein3"><b>© ИПТВ «Райка and Лайка», 2025</b>
 		    	<p>.</p></div>
 		</div>
 	</div>
