--- a/strelka-pobeda.html
+++ b/strelka-pobeda.html
@@ -121,7 +121,7 @@ if (cookiecook != "no") {
 		<div class="buttons">
 			<div class="logoo">
 				<img src="/theme/images/Logoreb.png">
-				<p>Интернет-телеканал "Райка and Лайка"</p>
+				<p>Интернет-телеканал «Райка and Лайка»</p>
 			  
 			</div>
 		</div>
@@ -133,6 +133,7 @@ if (cookiecook != "no") {
 			<a class="button" href="/reklama"><p>Реклама</p></a>
 			<a class="button" href="/history"><p>Вакансии</p></a>
 			<a class="button" href="/rabota"><p>Стать частью команды</p></a>
+			<a class="button" href="/strelka-pobeda"><p>Розыгрыш карт «Стрелка»</p></a>
 			<script>/* Когда пользователь нажимает на кнопку,
 переключение между скрытием и отображением раскрывающегося содержимого */
 function myFunction() {
@@ -180,6 +181,9 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <p class='description2'>Розыгрыш карт «Стрелка»<p>
+    <div class="sob">
+              <a href=""><img src="/theme/images/strelka.jpg"></a>
+         </div>
      <div class="description1">
          <p>Мы подготовили розыгрыш с необычными условиями.<br>
 Что для этого нужно?<br>
