--- a/livetv.html
+++ b/livetv.html
@@ -121,7 +121,7 @@ if (cookiecook != "no") {
 		<div class="buttons">
 			<div class="logoo">
 				<img src="/theme/images/Logoreb.png">
-				<p>Интернет-телеканал "Райка and Лайка"</p>
+				<p>Интернет-телеканал «Райка and Лайка»</p>
 			  
 			</div>
 		</div>
@@ -133,6 +133,7 @@ if (cookiecook != "no") {
 			<a class="button" href="/reklama"><p>Реклама</p></a>
 			<a class="button" href="/history"><p>Вакансии</p></a>
 			<a class="button" href="/rabota"><p>Стать частью команды</p></a>
+			<a class="button" href="/strelka-pobeda"><p>Розыгрыш карт «Стрелка»</p></a>
 			<script>/* Когда пользователь нажимает на кнопку,
 переключение между скрытием и отображением раскрывающегося содержимого */
 function myFunction() {
@@ -185,37 +186,47 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 11.06.2025</b>
-        <p>8:00 МСК:</p>
+        <b>Расписание на 12.06.2025</b>
+        <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>8:02 МСК:</p>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20 МСК:</p>
+        <p>10:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 10:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:45 МСК:</p>
+        <p>12:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:10 МСК:</p>
+        <p>12:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:25 МСК:</p>
+        <p>12:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>12:09 - 12:10 МСК:</p>
-        <p>Код с розыгрышем карт «Стрелка»</p>
-        <p>16:10 МСК:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>16:45 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>20:10 МСК:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>20:45 МСК:</p>
+        <p>С 13:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>15:50 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>17:55 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>18:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>21:10 МСК:</p>
+        <p>18:35 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>19:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 19:25 МСК:</p>
         <p>Продолжение вещания</p>
+        <p>23:55 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
 
 
 
