--- a/index.html
+++ b/index.html
@@ -191,51 +191,49 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 14.06.2025</b>
-        <p>9:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>9:02 МСК:</p>
+        <b>Расписание на 15.06.2025</b>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:20 МСК:</p>
+        <p>10:20 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 9:45 МСК:</p>
+        <p>С 10:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:10 МСК:</p>
+        <p>12:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:35 МСК:</p>
+        <p>12:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:50 МСК:</p>
+        <p>12:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 12:15 МСК:</p>
+        <p>С 13:15 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>14:50 МСК:</p>
+        <p>15:50 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>16:55 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>17:15 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:35 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
         <p>18:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 18:25 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>22:55 МСК:</p>
+        <p>- Дом забытых вещей <mark>ПРЕМЬЕРА!</mark></p>
+        <p>18:15 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>18:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:15 МСК:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 23:30 МСК:</p>
+        <p>18:55 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>19:20 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>20:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 20:25 МСК:</p>
         <p>Продолжение вещания</p>
+        <p>21:00 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
 
 
 
