--- a/rabota.html
+++ b/rabota.html
@@ -121,7 +121,7 @@ if (cookiecook != "no") {
 		<div class="buttons">
 			<div class="logoo">
 				<img src="/theme/images/Logoreb.png">
-				<p>Интернет-телеканал "Райка and Лайка"</p>
+				<p>Интернет-телеканал «Райка and Лайка»</p>
 			  
 			</div>
 		</div>
@@ -133,6 +133,7 @@ if (cookiecook != "no") {
 			<a class="button" href="/reklama"><p>Реклама</p></a>
 			<a class="button" href="/history"><p>Вакансии</p></a>
 			<a class="button" href="/rabota"><p>Стать частью команды</p></a>
+			<a class="button" href="/strelka-pobeda"><p>Розыгрыш карт «Стрелка»</p></a>
 			<script>/* Когда пользователь нажимает на кнопку,
 переключение между скрытием и отображением раскрывающегося содержимого */
 function myFunction() {
@@ -178,8 +179,8 @@ window.onclick = function(event) {
 </div>
 
 <div class="trenn">
-     <a class='tnn' href='/rabota-osnova'><p>Раздел "Основной, телевизионщик, монтажёр и т. д."</p></a>
-     <a class='tnn' href='/rabota-roblox'><p>Раздел Roblox "Метро Москвы Некрасовка" и "Метро Новосибирск"</p></a>
+     <a class='tnn' href='/rabota-osnova'><p>Отдел «Основной» (телевизионщик, монтажёр и т. д.)</p></a>
+     <a class='tnn' href='/rabota-roblox'><p>Отдел игр «Люберецкий Транспортный Узел» и «Метро Новосибирск»</p></a>
 </div>
   </div><!-- /.entry-content -->
 </section>
@@ -197,9 +198,9 @@ window.onclick = function(event) {
 		</div>
 		<div class="footer2">
 		     <div class="sob">
-		          <a href="https://vk.com/motion.deru"><img src="/theme/images/Motion Deru1.png"></a>
+		          <a href=""><img src="/theme/images/LetoRaL2025.png"></a>
 		     </div>
-		    <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b>
+		    <div class="contein3"><b>© ИПТВ «Райка and Лайка», 2025</b>
 		    	<p>.</p></div>
 		</div>
 	</div>
