--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 17.06.2025</b>
-        <p>10:00 МСК:</p>
+        <b>Расписание на 18.06.2025</b>
+        <p>8:00 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>10:15 МСК:</p>
+        <p>8:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:35 МСК:</p>
+        <p>8:35 МСК:</p>
         <p>- К/ф "Черепаха"</p>
         <p>С 9:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
@@ -205,41 +205,47 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:25 МСК:</p>
+        <p>10:25 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>12:45 МСК:</p>
+        <p>10:45 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:00 МСК:</p>
+        <p>11:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>13:25 МСК:</p>
+        <p>11:25 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 13:40 МСК:</p>
+        <p>С 11:40 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>15:25 МСК:</p>
+        <p>13:25 МСК:</p>
         <p>- Семейная связь</p>
+        <p>14:15 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
         <p>16:15 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>18:15 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>18:40 МСК:</p>
+        <p>16:40 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:00 МСК:</p>
+        <p>17:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>19:20 МСК:</p>
+        <p>17:20 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>19:35 МСК:</p>
+        <p>17:35 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 20:00 МСК:</p>
+        <p>С 18:00 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>22:10 МСК:</p>
+        <p>20:10 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>23:50 МСК:</p>
+        <p>21:50 МСК:</p>
         <p>- К/ф "Беседа"</p>
+        <p>22: МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 22:30 МСК:</p>
+        <p>Продолжение вещания</p>
 
 
 
