--- a/livetv.html
+++ b/livetv.html
@@ -235,7 +235,7 @@ window.onclick = function(event) {
         <p>- Дом забытых вещей</p>
         <p>21:50 МСК:</p>
         <p>- К/ф "Беседа"</p>
-        <p>22: МСК:</p>
+        <p>22:36 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>22:15 МСК:</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
