--- a/strelka-pobeda.html
+++ b/strelka-pobeda.html
@@ -180,7 +180,7 @@ window.onclick = function(event) {
 </div>
 
 <div class='ob'>
-     <p class='description2'>Розыгрыш карт «Стрелка»<p>
+     <p class='description2'>Розыгрыш карт «Стрелка»<p><mark>Розыгрыш завершён!</mark>
     <div class="sob">
               <a href=""><img src="/theme/images/strelka.jpg"></a>
          </div>
