--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@ window.onclick = function(event) {
 	<a class="rabota" href="/rabota"><p>Стать частью команды</p></a>
 </div>
 
-<div class="sob">
+<!-- <div class="sob">
               <a href="/strelka-pobeda"><img src="/theme/images/strelka.jpg"></a>
-         </div>
+         </div> -->
 
 <div class="title1">
 		<b>Прямой эфир</b><br>
@@ -191,57 +191,57 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 19.06.2025</b>
+        <b>Расписание на 20.06.2025</b>
         <p>9:00 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>9:15 МСК:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>9:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:35 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 10:00 МСК:</p>
+        <p>С 9:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- Короткометражный фильм "Страйдер" (18+)</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
+        <p>10:45 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>11:10 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>11:25 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>11:45 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:00 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>12:25 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 12:40 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>14:25 МСК:</p>
-        <p>- Семейная связь</p>
-        <p>15:15 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>17:15 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>17:40 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:00 МСК:</p>
+        <p>11:35 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>18:20 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>18:35 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 19:00 МСК:</p>
+        <p>12:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>21:10 МСК:</p>
+        <p>12:40 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:50 МСК:</p>
-        <p>- К/ф "Беседа"</p>
-        <p>23:36 МСК:</p>
+        <p>13:40 МСК:</p>
+        <p>- Чудеса случаются</p>
+        <p>15:25 МСК:</p>
+        <p>- Страйдер (18+)</p>
+        <p>15:35 МСК:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>15:45 МСК:</p>
+        <p>- Семейная связь</p>
+        <p>17:40 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>17:55 МСК:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>18:30 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>19:35 МСК:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>20:30 МСК:</p>
+        <p>- Страйдер (18+)</p>
+        <p>20:40 МСК:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>21:50 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>22:30 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:05 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>23:15 МСК:</p>
+        <p>Продолжение вещания</p>
 
 
 
