--- a/history.html
+++ b/history.html
@@ -121,7 +121,7 @@ if (cookiecook != "no") {
 		<div class="buttons">
 			<div class="logoo">
 				<img src="/theme/images/Logoreb.png">
-				<p>Интернет-телеканал "Райка and Лайка"</p>
+				<p>Интернет-телеканал «Райка and Лайка»</p>
 			  
 			</div>
 		</div>
@@ -209,9 +209,9 @@ window.onclick = function(event) {
 		</div>
 		<div class="footer2">
 		     <div class="sob">
-		          <a href="https://vk.com/motion.deru"><img src="/theme/images/Motion Deru1.png"></a>
+		          <a href=""><img src="/theme/images/LetoRaL2025.png"></a>
 		     </div>
-		    <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b>
+		    <div class="contein3"><b>© ИПТВ «Райка and Лайка», 2025</b>
 		    	<p>.</p></div>
 		</div>
 	</div>
