--- a/index.html
+++ b/index.html
@@ -190,60 +190,56 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 26.06.2025</b>
-        <p>8:00 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>8:15 МСК:</p>
+        <b>Расписание на 27.06.2025</b>
+        <p>9:00 МСК:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>9:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:35 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 9:00 МСК:</p>
+        <p>С 9:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- Короткометражный фильм "Страйдер" (18+)</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:25 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
         <p>10:45 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>11:10 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:00 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
         <p>11:25 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 11:40 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:25 МСК:</p>
-        <p>- Семейная связь</p>
-        <p>14:15 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>16:15 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>16:40 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00 МСК:</p>
+        <p>11:35 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>17:20 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>17:35 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 18:00 МСК:</p>
+        <p>12:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>20:10 МСК:</p>
+        <p>12:40 МСК:</p>
         <p>- Дом забытых вещей</p>
+        <p>13:40 МСК:</p>
+        <p>- Чудеса случаются</p>
+        <p>15:25 МСК:</p>
+        <p>- Страйдер (18+)</p>
+        <p>15:35 МСК:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>15:45 МСК:</p>
+        <p>- Семейная связь</p>
+        <p>17:40 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>17:55 МСК:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>18:30 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>19:35 МСК:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>20:30 МСК:</p>
+        <p>- Страйдер (18+)</p>
+        <p>20:40 МСК:</p>
+        <p>- Страйдер 2 (18+)</p>
         <p>21:50 МСК:</p>
-        <p>- К/ф "Беседа"</p>
-        <p>22:36 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>22:30 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:05 МСК:</p>
+        <p>- Дом забытых вещей</p>
         <p>23:15 МСК:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 23:30 МСК:</p>
         <p>Продолжение вещания</p>
 
 
