--- a/index.html
+++ b/index.html
@@ -190,57 +190,55 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 27.06.2025</b>
-        <p>9:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>9:02 МСК:</p>
+        <b>Расписание на 29.06.2025</b>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 9:20 МСК:</p>
+        <p>10:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 10:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер" (18+)</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:45 МСК:</p>
+        <p>12:00 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>12:10 МСК:</p>
+        <p>- К/Ф "Скейт"</p>
+        <p>12:25 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:10 МСК:</p>
+        <p>12:45 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:25 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>11:35 МСК:</p>
+        <p>13:05 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>12:40 МСК:</p>
+        <p>С 13:30 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>16:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>16:25 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>13:40 МСК:</p>
-        <p>- Чудеса случаются</p>
-        <p>15:25 МСК:</p>
-        <p>- Страйдер (18+)</p>
-        <p>15:35 МСК:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>15:45 МСК:</p>
-        <p>- Семейная связь</p>
-        <p>17:40 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>17:55 МСК:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>18:30 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>19:35 МСК:</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>20:30 МСК:</p>
-        <p>- Страйдер (18+)</p>
-        <p>20:40 МСК:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>21:50 МСК:</p>
-        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>22:30 МСК:</p>
+        <p>18:40 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>19:00 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:05 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>23:15 МСК:</p>
+        <p>19:20 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>19:45 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>20:30 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 20:50 МСК:</p>
         <p>Продолжение вещания</p>
+        <p>21:45 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>22:20 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
 
 
 
