--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ if (cookiecook != "no") {
 			<a class="button" href="/reklama"><p>Реклама</p></a>
 			<a class="button" href="/history"><p>Вакансии</p></a>
 			<a class="button" href="/rabota"><p>Стать частью команды</p></a>
+			<a class="button" href="/tele-video"><p>Телепередачи</p></a>
 			<script>/* Когда пользователь нажимает на кнопку,
 переключение между скрытием и отображением раскрывающегося содержимого */
 function myFunction() {
@@ -190,55 +191,61 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 29.06.2025</b>
-        <p>10:02 МСК:</p>
+        <b>Расписание на 30.06.2025</b>
+        <p>7:00 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>7:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:20 МСК:</p>
+        <p>7:35 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 10:45 МСК:</p>
+        <p>С 8:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:00 МСК:</p>
+        <p>9:25 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>9:45 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>10:00 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>10:25 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>12:10 МСК:</p>
-        <p>- К/Ф "Скейт"</p>
+        <p>С 10:40 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
         <p>12:25 МСК:</p>
+        <p>- Семейная связь</p>
+        <p>13:15 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>15:15 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>12:45 МСК:</p>
+        <p>15:40 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:05 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>С 13:30 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
         <p>16:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>16:25 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>18:40 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>19:00 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:20 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>19:45 МСК:</p>
-        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
-        <p>20:30 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 20:50 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>21:45 МСК:</p>
+        <p>16:20 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:20 МСК:</p>
-        <p>- К/ф "Семейная связь"</p>
+        <p>16:35 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 17:00 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>19:10 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>20:50 МСК:</p>
+        <p>- К/ф "Беседа"</p>
+        <p>21:36 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 22:30 МСК:</p>
+        <p>Продолжение вещания</p>
 
 
 
@@ -248,7 +255,7 @@ window.onclick = function(event) {
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
 </div>
 
-<a class="button_glbol" href="https://nuum.ru/channel/rayka_and_layka-tv"><b>Телепередачи</b></a>
+<a class="button_glbol" href="/tele-video"><b>Телепередачи</b></a>
 
 	</div>
 </body>
