--- a/index.html
+++ b/index.html
@@ -191,57 +191,50 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 04.07.2025</b>
-        <p>8:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>8:02 МСК:</p>
+        <b>Расписание на 05.07.2025</b>
+        <p>16:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20 МСК:</p>
+        <p>16:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 16:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер" (18+)</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:45 МСК:</p>
+        <p>18:00 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>18:10 МСК:</p>
+        <p>- К/Ф "Скейт"</p>
+        <p>18:25 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:10 МСК:</p>
+        <p>18:45 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:25 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>10:35 МСК:</p>
+        <p>19:05 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>11:40 МСК:</p>
+        <p>С 19:30 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>22:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>22:25 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>12:40 МСК:</p>
-        <p>- Чудеса случаются</p>
-        <p>14:25 МСК:</p>
-        <p>- Страйдер (18+)</p>
-        <p>14:35 МСК:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>14:45 МСК:</p>
-        <p>- Семейная связь</p>
-        <p>16:40 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>16:55 МСК:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>17:30 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>18:35 МСК:</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>19:30 МСК:</p>
-        <p>- Страйдер (18+)</p>
-        <p>19:40 МСК:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>20:50 МСК:</p>
-        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>21:30 МСК:</p>
+        <b>Расписание на 06.07.2025</b>
+        <p>00:40 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>05:00 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:05 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>22:15 МСК:</p>
-        <p>Продолжение вещания</p>
+        <p>05:20 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>05:45 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>06:30 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
 
 
 
