--- a/index.html
+++ b/index.html
@@ -191,50 +191,62 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 05.07.2025</b>
-        <p>16:02 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:20 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 16:45 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>18:00 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>18:10 МСК:</p>
-        <p>- К/Ф "Скейт"</p>
-        <p>18:25 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>18:45 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:05 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>С 19:30 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>22:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>22:25 МСК:</p>
-        <p>- Дом забытых вещей</p>
         <b>Расписание на 06.07.2025</b>
         <p>00:40 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
         <p>05:00 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>05:20 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>05:45 МСК:</p>
-        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
-        <p>06:30 МСК:</p>
+        <p>Перерыв вещания</p>
+        <br>
+        <p>11:02 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>11:20 МСК:</p>
         <p>- К/ф "Черепаха"</p>
+        <p>С 11:45 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>13:00 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>13:10 МСК:</p>
+        <p>- К/Ф "Скейт"</p>
+        <p>13:25 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>13:45 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>14:05 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>С 14:30 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>17:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>17:25 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>19:40 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>20:00 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>20:20 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>20:45 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>21:30 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 21:50 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>22:45 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>23:20 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
 
 
 
