--- a/index.html
+++ b/index.html
@@ -191,57 +191,55 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 12.07.2025</b>
-        <p>11:00 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>11:15 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:35 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 11:00 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:25 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>13:45 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>14:00 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>14:25 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>С 14:40 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>16:25 МСК:</p>
-        <p>- Семейная связь</p>
-        <p>17:15 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>19:15 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>19:40 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>20:00 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>20:20 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>20:35 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 21:00 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>23:10 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <br>
         <b>Расписание на 13.07.2025</b>
-        <p>00:50 МСК:</p>
-        <p>- К/ф "Беседа"</p>
+        <p>10:02 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>10:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 10:45 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>12:00 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>12:10 МСК:</p>
+        <p>- К/Ф "Скейт"</p>
+        <p>12:25 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>12:45 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>13:05 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>С 13:30 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>16:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>16:25 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>18:40 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>19:00 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>19:20 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>19:45 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>20:30 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 20:50 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>21:45 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>22:20 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
 
 
 
