--- a/index.html
+++ b/index.html
@@ -191,55 +191,60 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 20.07.2025</b>  
-        <p>11:02:</p>
+        <b>Расписание на 21.07.2025</b>  
+        <p>10:00:</p>
+        <p>- Дом забытых вещей</p>
+        <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:20:</p>
+        <p>10:35:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 11:45:</p>
+        <p>С 11:00:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
+        <p>12:25:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>12:45:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>13:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>13:10:</p>
-        <p>- К/Ф "Скейт"</p>
-        <p>13:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>13:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>14:05:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 14:30:</p>
+        <p>13:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>С 13:40:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>17:00:</p>
+        <p>15:25:</p>
+        <p>- Семейная связь</p>
+        <p>16:15:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>17:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>19:40:</p>
+        <p>18:15:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>20:00:</p>
+        <p>18:40:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>20:20:</p>
+        <p>19:00:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>20:45:</p>
-        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
-        <p>21:30:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 21:50:</p>
-        <p>Продолжение вещания</p>
-        <p>22:45:</p>
+        <p>19:20:</p>
         <p>- Дом забытых вещей</p>
-        <p>23:20:</p>
-        <p>- К/ф "Семейная связь"</p>
+        <p>19:35:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 20:00:</p>
+        <p>Продолжение вещания</p>
+        <p>22:10:</p>
+        <p>- Дом забытых вещей</p>
+        <p>23:50:</p>
+        <p>- К/ф "Беседа"</p><br>
+        <b>Расписание на 21.07.2025</b>
+        <p>00:36:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>00:55:</p>
+        <p>Перерыв вещания</p>
 
 
 
